--- a/RaylibStarterCPP/RaylibStarterCPP.vcxproj
+++ b/RaylibStarterCPP/RaylibStarterCPP.vcxproj
@@ -24,7 +24,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>RaylibStarterCPP</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>GameAIKeyboardBehaviour</ProjectName>
+    <ProjectName>GameAI</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -173,11 +173,13 @@
     <ClCompile Include="srccpp\KeyboardBehaviour.cpp" />
     <ClCompile Include="srccpp\main.cpp" />
     <ClCompile Include="srccpp\SeekBehaviour.cpp" />
+    <ClCompile Include="srccpp\Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="inc\Application.h" />
     <ClInclude Include="inc\GameObject.h" />
     <ClInclude Include="inc\Behaviour.h" />
+    <ClInclude Include="inc\Player.h" />
     <ClInclude Include="inc\KeyboardBehaviour.h" />
     <ClInclude Include="inc\SeekBehaviour.h" />
   </ItemGroup>
