--- a/RaylibStarterCPP/RaylibStarterCPP.vcxproj
+++ b/RaylibStarterCPP/RaylibStarterCPP.vcxproj
@@ -168,6 +168,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="srccpp\StandingGuard.cpp" />
     <ClCompile Include="srccpp\Graph2D.cpp" />
     <ClCompile Include="srccpp\Graph2DEditor.cpp" />
     <ClCompile Include="srccpp\FleeBehaviour.cpp" />
@@ -193,6 +194,7 @@
     <ClInclude Include="inc\KeyboardBehaviour.h" />
     <ClInclude Include="inc\SeekBehaviour.h" />
     <ClInclude Include="inc\WonderBehaviour.h" />
+    <ClInclude Include="inc\StandingGuard.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
